--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crossing Game</title>
     <style type="text/css">
+        body {
+            background-color: coral;
+        }
+        
         h1 {
             text-align: center;
         }
